--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-fastapi==0.103.2
+fastapi==0.104.1
 numpy==1.26.1
 python-dotenv==1.0.0
 Requests==2.31.0
 sentence_transformers==2.2.2
 uvicorn==0.23.2
+opencv-python==4.8.1.78
+line-bot-sdk==3.5.1
+matplotlib==3.8.2
